--- a/app/scss/main.sass
+++ b/app/scss/main.sass
@@ -409,3 +409,480 @@ body
   font-weight: 400
   line-height: 24px
   color: #424242
+/* similar PRODUCTS BLOCK
+.similar
+  margin-bottom: 80px
+.similar-top
+  display: flex
+.similar-list
+  display: flex
+.similar-title
+  width: 100%
+.similar-title
+  position: relative
+  font-family: Montserrat
+  font-size: 32px
+  font-weight: 700
+  line-height: 40px
+  text-align: center
+.similar-list
+  justify-content: space-between
+  margin-top: 54px
+.similar-wrap
+  width: 18%
+.similar-item__img
+  margin-bottom: 12px
+.similar-item__name
+  font-size: 16px
+  font-weight: 700
+  line-height: 24px
+  margin-bottom: 8px
+.similar-item__price
+  font-size: 20px
+  font-weight: 400
+  line-height: 24px
+  color: #424242
+/* SEO BLOCK
+.seo-text
+  padding: 80px 0
+  background: #FCE9DA
+.seo-text__row
+  align-items: center
+.seo-text__title
+  font-family: Montserrat
+  font-size: 32px
+  font-weight: 700
+  line-height: 40px
+  margin-bottom: 40px
+.seo-text__desc
+  font-size: 16px
+  font-weight: 400
+  line-height: 2.5
+.seo-text__desc p
+  margin-bottom: 40px
+.seo-text__btn-link
+  display: inline-block
+  width: 160px
+  line-height: 40px
+  background: #E72E16
+  border-radius: 4px
+  color: #ffffff
+  text-align: center
+  font-weight: bold
+.seo-text__right
+  display: flex
+  justify-content: space-between
+.seo-text__img
+  &:first-child
+    margin-top: 160px
+.seo-text__img-src
+  max-height: 560px
+/* SIMPLE MENU
+.menu-simple
+  .menu-catalog__title
+    border-radius: 4px
+  .menu-simple-catalog__title-link
+    display: block
+    width: 100%
+    line-height: 48px
+    background: url(../svg/hamburger.svg) no-repeat left 28px center #e72e16
+    border-radius: 4px
+    font-weight: 700
+    font-size: 16px
+    color: #fff
+    padding-left: 53px
+/* BREADCRUMBS
+.breadcrumbs
+  padding: 38px 0
+  background: #FCE9DA
+  margin-bottom: 80px
+.breadcrumbs-row
+  align-items: center
+  text-align: center
+.breadcrumbs-list
+  display: flex
+  justify-content: center
+  align-items: center
+.breadcrumbs-list__icon
+  width: 16px
+  height: 16px
+.breadcrumbs-list__item
+  color: #5C3635
+.breadcrumbs-list__link
+  font-size: $size
+  font-weight: 400
+  color: #5C3635
+  &:after
+    content: "/"
+    margin: 0 10px
+.breadcrumbs-title
+  font-family: Montserrat
+  font-size: 40px
+  font-weight: 700
+  line-height: 48px
+  margin-bottom: 16px
+/* CARD CONTENT
+.card
+  margin-bottom: 80px
+.card-left__img
+  margin-bottom: 20px
+.card-left__img-src
+  width: auto
+  max-width: 572px
+.card-left__img-more
+  max-width: 572px
+  display: flex
+  justify-content: space-between
+.card-left__img-more-wrap
+  max-width: 128px
+  max-height: 128px
+.card-right__title
+  font-family: Montserrat
+  font-size: 40px
+  font-weight: 700
+  line-height: .7
+  margin-bottom: 24px
+.card-right__price
+  display: flex
+  flex-wrap: wrap
+  align-items: center
+.card-right__price-text
+  font-size: 32px
+  font-weight: 400
+  line-height: 40px
+.card-right__price-faq
+  display: inline-block
+  width: 24px
+  height: 24px
+  background: url(../svg/faq.svg) no-repeat center center
+  margin-left: 15px
+.card-right__block
+  display: block
+  margin-bottom: 40px
+  &:before
+    display: block
+    content: ""
+    width: 100%
+    height: 1px
+    background: #FCE9DA
+    margin: 40px 0
+  &:after
+    display: block
+    content: ""
+    width: 100%
+    height: 1px
+    background: #FCE9DA
+    margin: 40px 0
+.card-right__desc
+  font-size: 14px
+  font-weight: 400
+  line-height: 40px
+  margin-bottom: 40px
+.card-right__buttons
+  display: flex
+.card-right__quantity
+  position: relative
+  width: 120px
+  height: 48px
+  box-sizing: border-box
+  border-radius: 4px
+  margin-right: 24px
+.card-right__quantity-input
+  display: block
+  border: 0
+  width: 80px
+  height: 48px
+  text-align: center
+  font-weight: bold
+  font-size: 16px
+  border-left: 2px solid #FCE9DA
+  border-right: 1px solid #FCE9DA
+  border-top: 2px solid #FCE9DA
+  border-bottom: 2px solid #FCE9DA
+  border-radius: 4px 0 0 4px
+  box-sizing: border-box
+.card-right__quantity-btn
+  position: absolute
+  width: 40px
+  height: 48px
+  right: 0
+  top: 0
+  box-sizing: border-box
+.card-right__quantity-plus, .card-right__quantity-minus
+  display: block
+  width: 100%
+  height: 24px
+  text-align: center
+  cursor: pointer
+  font-weight: bold
+  font-size: 16px
+  line-height: 20px
+  box-sizing: border-box
+.card-right__quantity-plus
+  border-left: 1px solid #FCE9DA
+  border-right: 2px solid #FCE9DA
+  border-top: 2px solid #FCE9DA
+  border-bottom: 1px solid #FCE9DA
+  border-radius: 0 4px 0 0
+.card-right__quantity-minus
+  border-left: 1px solid #FCE9DA
+  border-right: 2px solid #FCE9DA
+  border-top: 1px solid #FCE9DA
+  border-bottom: 2px solid #FCE9DA
+  border-radius: 0 0 4px 0
+.card-right__order
+  margin-right: 24px
+.card-right__order-btn
+  line-height: 48px
+  width: 160px
+  border: 0px
+  color: #ffffff
+  font-weight: bold
+  border-radius: 4px
+  background: #E72E16
+  text-align: center
+  cursor: pointer
+.card-right__favorites-btn
+  width: 48px
+  height: 48px
+  border: 2px solid #FCE9DA
+  box-sizing: border-box
+  border-radius: 4px
+  background: url(../svg/favorites.svg) no-repeat center center #fff
+  background-size: 28px auto
+  cursor: pointer
+.card-right__discount-title
+  font-family: Montserrat
+  font-size: 24px
+  font-weight: 700
+  line-height: 32px
+  margin-bottom: 24px
+.card-right__discount-table
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-between
+.card-right__discount-item
+  width: 32%
+  padding: 24px 26px
+  border: 2px solid #FCE9DA
+  box-sizing: border-box
+  border-radius: 4px
+.card-right__discount-percent
+  font-family: Montserrat
+  font-weight: bold
+  font-size: 40px
+  line-height: 48px
+  color: #5C3635
+  margin-bottom: 8px
+.card-right__discount-desc
+  font-size: 16px
+  line-height: 24px
+  color: #424242
+.card-bottom__tabs
+  display: flex
+  margin-top: 80px
+.card-bottom__tab
+  font-family: Montserrat
+  font-style: normal
+  font-weight: bold
+  font-size: 32px
+  line-height: 40px
+  color: rgba(0, 0, 0, .5)
+  padding-bottom: 24px
+  margin-right: 40px
+.card-bottom__tab.active
+  position: relative
+  color: #000
+  &:after
+    content: ""
+    position: absolute
+    bottom: 0
+    left: 0
+    width: 100%
+    height: 4px
+    background: #5C3635
+.card-bottom__txt
+  display: none
+  padding-top: 40px
+  font-size: 16px
+  font-weight: 400
+  line-height: 40px
+.card-bottom__txt.active
+  display: block
+/* CART CONTENT
+.cart-table
+  margin-bottom: 40px
+.cart-header
+  padding: 24px 0
+  background: #FCE9DA
+  font-size: 16px
+  font-weight: 700
+.cart-row
+  padding: 24px 0
+  align-items: center
+  box-sizing: border-box
+  border: 1px solid #FCE9DA
+  border-top: 0
+  &:last-child
+    border-radius: 0px 0px 4px 4px
+.cart-header__item
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+.cart-header__item-del
+  display: block
+  border: 0
+  width: 24px
+  height: 24px
+  margin: 0 auto
+  background: url(../svg/delete.svg) no-repeat center center
+  cursor: pointer
+.cart-header__item-img
+  width: 80px
+  height: 80px
+  overflow: hidden
+  img
+    width: 100%
+    height: 100%
+.cart-header__item-title
+  margin-left: 40px
+  font-size: 16px
+  font-weight: 700
+.cart-header__item-price
+  display: flex
+  width: 100%
+  align-items: center
+  font-size: 16px
+  font-weight: 400
+.cart-header__item-price-new
+  font-size: 16px
+  font-weight: 700
+  color: #E72E16
+.cart-header__item-price-old
+  margin-left: 10px
+  font-size: 12px
+  text-decoration: line-through
+  color: #424242
+.cart-header__item-discount
+  font-size: 12px
+  font-weight: 400
+  color: #E72E16
+.card-header__item-quantity
+  position: relative
+  width: 120px
+  height: 48px
+.card-header__item-quantity-input
+  display: block
+  width: 80px
+  height: 48px
+  border-left: 2px solid #FCE9DA
+  border-top: 2px solid #FCE9DA
+  border-bottom: 2px solid #FCE9DA
+  border-right: 1px solid #FCE9DA
+  box-sizing: border-box
+  border-radius: 4px 0 0 4px
+  font-size: 16px
+  font-weight: 700
+  text-align: center
+.card-header__item-quantity-button
+  position: absolute
+  width: 40px
+  height: 48px
+  top: 0
+  right: 0
+  .card-header__item-quantity-plus
+    border-left: 1px solid #FCE9DA
+    border-top: 2px solid #FCE9DA
+    border-bottom: 1px solid #FCE9DA
+    border-right: 2px solid #FCE9DA
+    border-radius: 0 4px 0 0
+  .card-header__item-quantity-minus
+    border-left: 1px solid #FCE9DA
+    border-top: 1px solid #FCE9DA
+    border-bottom: 2px solid #FCE9DA
+    border-right: 2px solid #FCE9DA
+    border-radius: 0 0 4px 0
+  button
+    width: 40px
+    height: 24px
+    display: block
+    border: 0
+    background: #fff
+    cursor: pointer
+    font-size: 16px
+    font-weight: 700
+.cart-header__item-total
+  font-size: 16px
+  font-weight: 400
+.cart-total
+  justify-content: flex-end
+  margin-bottom: 80px
+.cart-total__wrap
+  position: relative
+  padding-right: 0
+.cart-total__coupon
+  height: 48px
+  margin-bottom: 40px
+.cart-total__coupon-input
+  display: block
+  width: 100%
+  height: 48px
+  padding-left: 25px
+  border: 2px solid #FCE9DA
+  box-sizing: border-box
+  border-radius: 4px 0 0 4px
+  font-size: 16px
+  font-weight: 400
+  color: #000
+  &::placeholder
+    color: rgba(131,126,139, .4)
+.cart-total__coupon-btn
+  position: absolute
+  right: 0
+  top: 0
+  border: 0
+  width: 200px
+  border-radius: 4px
+  font-size: 16px
+  font-weight: 700
+  line-height: 48px
+  color: #ffffff
+  text-align: center
+  background: #E72E16
+.cart-total__title
+  font-family: Montserrat
+  font-size: 24px
+  font-weight: 700
+  line-height: 32px
+  margin-bottom: 16px
+.cart-total__table
+  margin-bottom: 40px
+.cart-total__table-row
+  width: 100%
+  padding: 16px 0 16px 16px
+  border-bottom: 1px solid #FCE9DA
+  &:last-child
+    border-bottom: 0
+.cart-total__table-row-price
+  font-size: 16px
+  font-weight: 700
+  color: #424242
+.cart-total__order-button
+  border: 0
+  width: 100%
+  line-height: 48px
+  background: #E72E16
+  border-radius: 4px
+  text-align: center
+  font-size: 16px
+  font-weight: 700
+  cursor: pointer
+  color: #fff
+
+
+
+
+
+
+
+
